mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  labels:
    app: mongo-express
  namespace: database
spec:
  replicas: 1
  selector:
   matchLabels:
    app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
      namespace: database
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata: 
  name: mongo-express-service
  namespace: database
spec:
  selector:
    app: mongo-express
  #type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
    #nodePort: 30000
