mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb
  namespace: database
spec:
  replicas: 1
  selector:
   matchLabels:
    app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
      namespace: database
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata: 
  name: mongodb-service
  namespace: database
spec:
  selector: 
    app: mongodb
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
