database-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: database-ingress
  namespace: database
spec:
  rules:
  - host: dubaimetal.xyz
    http:
      paths:
      - backend:
         service:
          name: mongo-express-service
          port: 
           number: 8081
